[tool.poetry]
name = "ai-healthcheck"
version = "0.1.1a1"
description = "Lightweight health checks for OpenAI"
authors = ["Minseok Song <minseok.song@mssong.com>"]
repository = "https://github.com/skytin1004/ai-healthcheck"
license = "MIT"
readme = "README.md"
keywords = ["openai", "healthcheck", "monitoring"]
packages = [{ include = "ai_healthcheck", from = "src" }]
 
[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.28,<3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"